Get far enough along on puzzle work to have the number conversion feature working. Still need some spacing fixes, but good enough for 1 day

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,19 +1,21 @@
 @use "../node_modules/@picocss/pico/scss/pico" with (
+  $enable-responsive-spacings: false,
+  $enable-responsive-typography: false,
   $enable-semantic-container: false,
   $enable-classes: true,
   $modules: (
+    "components/accordion": true,
+    "components/nav": true,
+    "components/card": true,
     "content/code": false,
     "forms/input-color": false,
     "forms/input-date": false,
     "forms/input-file": false,
     "forms/input-range": false,
     "forms/input-search": false,
-    "components/accordion": false,
-    "components/card": false,
     "components/dropdown": false,
     "components/loading": false,
     "components/modal": false,
-    "components/nav": false,
     "components/progress": false,
     "components/tooltip": false,
     "utilities/accessibility": false,
